--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 	<section class="grid-container">
 		<h2>Imagery</h2>
 		<div class="imagery-1">
-			<img src="http://placehold.it/300x200">
+			<img src="img/brr.jpg">
 		</div>
 		<div class="imagery-2">
-			<img src="http://placehold.it/300x200">
+			<img src="img/frosty.jpg">
 		</div>
 		<div class="imagery-3">
-			<img src="http://placehold.it/300x200">
+			<img src="img/holiday.jpg">
 		</div>
 	</section>
 
@@ -63,7 +63,7 @@
 	<section class="grid-container">
 		<h2>Icons</h2>
 		<div class="icon-1">
-			<img src="img/icon-sample.svg">
+			<img src="/img/iconmonstr-christmas-snowflake-icon-256.png">
 		</div>
 		<div class="icon-2">
 			<img src="img/icon-sample.svg">
@@ -107,14 +107,14 @@
 			<h2>Typography Sample</h2>
 
 			<h2>Primary Header</h2>
-			<p>Font name, variant, color, etc</h2>
+			<p>Font name, variant, color, etc</p>
 			
 
 			<h3>Secondary Header</h3>
-			<p>Font name, variant, color, etc</h2>
+			<p>Font name, variant, color, etc</p>
 			
 			<h3>Paragraphs</h3>
-			<p>Font name, variant, colo, etc</h2>
+			<p>Font name, variant, colo, etc</p>
 				
 			<p>Lorem ipsum <a href="#">dolor sit amet</a>, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut <a href="#">labore et</a>dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
